# explore-kg-llm-pipeline

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
deploy/helm/explorer/: Chart.yaml  README.md  values.yaml
deploy/helm/explorer/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml
explorer/: __init__.py
explorer/backend/: __init__.py  models.py
explorer/backend/exploration_session/: __init__.py  state.py
explorer/backend/graph_adapter/: __init__.py
explorer/backend/graph_adapter/neo4j/: __init__.py  adapter.py
explorer/backend/path_discovery/: __init__.py  service.py
explorer/backend/path_ranking/: __init__.py  service.py
explorer/backend/semantic_search/: __init__.py  service.py
explorer/frontend/: __init__.py  streamlit_app.py
explorer/frontend/components/subgraph/: index.html
explorer/tests/: __init__.py  test_session_and_ranking.py
scripts/: dump_embeddings.py  restore_embeddings.py
src/: config.py
src/cypher/: create_node_text.cypher  create_semantic_text.cypher
src/embeddings/: embed_nodes.py  embed_publications.py  embed_relationships.py  embedding_client.py  embedding_utils.py
src/search/: evidence_graph.py  node_semantic_search.py  semantic_search.py
