[project]
name = "explore-kg-llm-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.5",
    "neo4j>=6.0.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]
